# android-testdpc

./: .gitignore  BUILD  BUILD_SUMMARY.md  BZEL_GRADLE_CONCLUSION.md  CONTRIB  Hello.java  LICENSE  MODULE.bazel  PRIVACY  README  README.md  README_zh-cn.md  WORKSPACE  android_sdk.bzl  build.gradle  build.gradle.kts  build.sh  gradle.properties  gradlew  nfcprovisioning.txt  settings.gradle  settings.gradle.kts  setup_androidstudio.sh  setupcompat.BUILD  setupdesign.BUILD
src/main/: AndroidManifest.xml  AndroidManifestDebug.xml  BUILD.bazel
src/main/res/drawable/: arrow_down.xml  arrow_up_down.xml  ic_circle.xml  ic_enterprise_blue.xml  managed_device_setup.xml  managed_profile_setup.xml
src/main/res/layout/: account_row.xml  activity_add_account.xml  activity_delay_settings.xml  activity_get_provisioning_mode.xml  activity_main.xml  add_intent_or_intent_filter.xml  available_components_list.xml  basic_key_value_pair.xml  choose_color_item.xml  choose_logo_item.xml  color_picker.xml  create_and_manage_user_dialog_prompt.xml  cross_profile_apps.xml  cross_profile_apps_allowlist.xml  data_usage_item.xml  eap_tls_wifi_config_dialog.xml  edit_delete_row.xml  enable_component_row.xml  enable_cosu_activity.xml  esim_dialog_layout.xml  factory_reset_protection_policy.xml  finalize_activity.xml  fragment_pending_changes.xml  freeze_period_row.xml  grant_key_pair_to_app_prompt.xml  insert_apn.xml  intent_input.xml  item_pending_change.xml  lock_now_dialog_prompt.xml  lockdown_settings.xml  manage_apps.xml  managed_subscriptions_policy.xml  network_usage_app_history_item.xml  (+21 more)
(+1100 files in other folders)
